# CarmerServer

./: CMakeLists.txt  README.md
CarmerServer/depend/faac-1.29.9.2/libs/: libfaac.so.0
CarmerServer/depend/jrtplib-3.11.1/libs/: libjrtp.so.3.11.1
CarmerServer/src/: CMakeLists.txt
CarmerServer/test/: CMakeLists.txt  H264Nalu_test.c  jrtpSend_aac_test.cpp  jrtpSend_h264_test.cpp  jrtpSend_h264_test.sdp  jrtpSend_pcm_test.cpp  jrtpSend_pcm_test.sdp
Player/: Player.cbp  Player.depend  Player.layout  player.c
include/: H264NalDecode.h
src/: H264NalDecode.c
test/: CMakeLists.txt  jrtpSend_aac_test.cpp  jrtpSend_aac_test.sdp  jrtpSend_h264_test.cpp  jrtpSend_h264_test.sdp
